# IMXRT-VSCode-CMake-Skelton

./: .gitignore  README.md
AddPeripheral/: CMakeLists.txt  build_sdram_txt_debug.sh  build_sdram_txt_release.sh  hello_world.mex
AddPeripheral/FLEXSPI_NOR_SDRAM_DEBUG/: AddPeripheral.elf
AddPeripheral/component/uart/: component_lpuart_adapter_MIMXRT1021.cmake
AddPeripheral/drivers/: driver_clock_MIMXRT1021.cmake  driver_common_MIMXRT1021.cmake
AddPeripheral/source/: hello_world.c
AddPeripheral/utilities/: utility_assert_lite_MIMXRT1021.cmake  utility_debug_console_lite_MIMXRT1021.cmake
AddPeripheral/xip/: driver_xip_board_evkmimxrt1020_MIMXRT1021.cmake
hello_world/: CMakeLists.txt  build_all.bat  build_all.sh  build_sdram_txt_debug.bat  build_sdram_txt_release.bat  flags.cmake  hello_world.mex
hello_world/FLEXSPI_NOR_SDRAM_DEBUG/: hello_world.elf  hello_world.hex
hello_world/board/: pin_mux.c
hello_world/component/lists/: component_lists_MIMXRT1021.cmake
hello_world/device/: device_MIMXRT1021_CMSIS_MIMXRT1021.cmake  device_MIMXRT1021_system_MIMXRT1021.cmake
hello_world/drivers/: driver_igpio_MIMXRT1021.cmake  driver_iomuxc_MIMXRT1021.cmake  driver_lpuart_MIMXRT1021.cmake
hello_world/startup/: device_MIMXRT1021_startup_MIMXRT1021.cmake
hello_world/xip/: driver_xip_device_MIMXRT1021.cmake
sdk/SDK_2_10_0_MIMXRT1021xxxxx/: MIMXRT1021xxxxx_manifest_v3_8.xml  SW-Content-Register.txt
